update for 0920 science and technology career fair

--- a/artwork.html
+++ b/artwork.html
@@ -28,14 +28,14 @@
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 <div class="wrapper">
-	<header>
+	<header class="nav">
 		<!-- <img class="logo" src="img/logo.png" alt=""> -->
 		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
 		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
-		<a href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 	</header>
 
-	<article class="introduce">
+	<article class="intro">
 	<div class="toolbar mb2 mt2">
 	  <button class="btn fil-cat" href="" data-rel="all">All</button>
 	  <button class="btn fil-cat" data-rel="poster">Posters</button>
