--- a/about.html
+++ b/about.html
@@ -20,8 +20,8 @@
 </head>
 <body>
 	<div class="drawer">
-		<span class="drawer_btn_nav"><a href="index.html" class="light">ABOUT</a></span>
-		<span class="drawer_btn_nav"><a href="projects.html">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="index.html">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="designdiary.html">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
@@ -30,13 +30,13 @@
 	</div>
 <div class="wrapper">
 	<header>
-	<!-- <nav> -->
-<!-- 		<span class="btn_nav"><img class="logo" src="img/logo.png" alt=""></span> -->
-		<span class="btn_nav"><a href="about.html" class="a_nav">PROJECT</a></span>
-		<span class="btn_nav"><a href="artwork.html" class="a_nav">ARTWORK</a></span>
-		<span class="btn_nav"><a href="about.html" class="a_nav">ABOUT</a></span>
-	<!-- </nav> -->
+		<img class="logo" src="img/logo.png" alt="">
+		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a href="artwork.html" class="a_nav"><span class="btn_nav">ARTWORK</span></a>
+		<a href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
+		<a href="index.html" class="a_nav light"><span class="btn_nav">PROJECTS</span></a>
 	</header>
+
 	<article>
 		<div id="about_text">
 		<img id="avatar" src="img/wei.jpg" alt="">
