--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>	
 
-	<title>WEI CHENG's Portfolio</title>
+	<title>WEI CHENG | Portfolio</title>
 </head>
 <body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="designdiary.html">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
@@ -30,10 +31,11 @@
 	</div>
 <div class="wrapper">
 	<header>
-		<!-- <img class="logo" src="img/logo.png" alt=""> -->
-		<a href="index.html" class="a_nav light"><span class="btn_nav">PROJECTS</span></a>
-		<a href="artwork.html" class="a_nav"><span class="btn_nav">ARTWORK</span></a>
+		<img class="logo" src="img/logo.png" alt="">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a href="artwork.html" class="a_nav"><span class="btn_nav">ARTWORK</span></a>
+		<a href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
+		<a href="index.html" class="a_nav light"><span class="btn_nav">PROJECTS</span></a>
 	</header>
 	
 	<!-- intro -->
