--- a/artwork.html
+++ b/artwork.html
@@ -16,11 +16,12 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
 	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
-	<title>WEI CHENG's Portfolio</title>
+	<title>WEI CHENG | Portfolio</title>
 </head>
 <body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">PROJECTS</a></span>
+		<span class="drawer_btn_nav"><a href="designdiary.html">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html" class="light">ARTWORK</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
@@ -28,11 +29,12 @@
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
 <div class="wrapper">
-	<header class="nav">
-		<!-- <img class="logo" src="img/logo.png" alt=""> -->
-		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
-		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
+	<header>
+		<img class="logo" src="img/logo.png" alt="">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
+		<a href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
+		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
 	</header>
 
 	<article class="intro">
