update design diary link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">PROJECTS</a></span>
-		<span class="drawer_btn_nav"><a href="designdiary.html">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
@@ -33,17 +33,17 @@
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="artwork.html" class="a_nav"><span class="btn_nav">ARTWORK</span></a>
-		<a href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="index.html" class="a_nav light"><span class="btn_nav">PROJECTS</span></a>
 	</header>
 	
 	<!-- intro -->
 	<article class="intro">
-		<h1>Hello, I'm Wei Cheng.</h1>
+		<h1>Wei Cheng | Master student in User Experience Design</h1>
 		<p>
-			I am now studying Master of Information Studies at University of Texas at Austin,<br>
-			focusing in user experience design. 
+			I am currently studying Master of Information Studies at University of Texas at Austin iSchool,<br>
+			focusing on user experience. 
 		</p>
 	</article>
 	
