--- a/artwork.html
+++ b/artwork.html
@@ -21,8 +21,8 @@
 <body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">PROJECTS</a></span>
-		<span class="drawer_btn_nav"><a href="designdiary.html">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="artwork.html" class="light">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
@@ -32,8 +32,8 @@
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
-		<a href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
 	</header>
 
