add one artwork

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 		<img class="logo" src="img/logo.png" alt="">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="artwork.html" class="a_nav"><span class="btn_nav">ARTWORK</span></a>
-		<a href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
+		<a target="_blank" href="designdiary.html" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="index.html" class="a_nav light"><span class="btn_nav">PROJECTS</span></a>
 	</header>
 
