--- a/artwork.html
+++ b/artwork.html
@@ -32,12 +32,21 @@
 	<header>
 		<img class="logo" src="img/logo.png" alt="">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
-		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
+		<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
 		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
 	</header>
-
+	
+	<!-- intro -->
 	<article class="intro">
+		<h1>Artwork</h1>
+		<p>
+			I do poster design, oilpainting, and I likes to do calligraphy.<br>
+			Here are some art works of her.
+		</p>
+	</article>
+
+	<article class="artwork">
 	<div class="toolbar mb2 mt2">
 	  <button class="btn fil-cat" href="" data-rel="all">All</button>
 	  <button class="btn fil-cat" data-rel="poster">Posters</button>
@@ -93,6 +102,9 @@
 		<div class="tile scale-anm calligraphy all">
 			<img src="art/calli-2.png" alt="" />
 		</div>
+		<div class="tile scale-anm paintings all">
+			<img src="art/wlogo.png" alt="" />
+		</div>
 	</div>
 
 	<div style="clear:both;"></div>
@@ -103,7 +115,7 @@
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
-		<span class="copyright">&copy; WEI CHENG | 2017.</span><br>
+		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
 </id>
 </body>
