--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
 	
 	<!-- intro -->
 	<article class="intro">
-		<h1>Wei Cheng | Master student in User Experience Design</h1>
+		<h1>Hi! I'm Wei Cheng</h1>
 		<p>
-			I am currently studying Master of Information Studies at University of Texas at Austin iSchool,<br>
-			focusing on user experience. 
+			I am a graduate student currently studies at iSchool in University of Texas at Austin.<br>
+			I came from 3+ years frontend developer experience,<br>
+			currently focusing on user experience design.<br>
 		</p>
 	</article>
 	
