--- a/artwork.html
+++ b/artwork.html
@@ -28,82 +28,83 @@
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
 	</div>
-<div class="wrapper">
+
 	<header>
-		<img class="logo" src="img/logo.png" alt="">
+		<img class="logo" src="img/logo.png" alt="logo">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
-		<a target="_blank" href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
+		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="artwork.html" class="a_nav light"><span class="btn_nav">ARTWORK</span></a>
 		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
 	</header>
-	
-	<!-- intro -->
-	<article class="intro">
-		<h1>Artwork</h1>
-		<p>
-			I do poster design, oilpainting, and I likes to do calligraphy.<br>
-			Here are some art works of her.
-		</p>
-	</article>
+	<div class="parallax-art-1">
+		<article class="intro">
+			<h1>Artwork</h1>
+			<p>
+				I like poster design, oil painting, and calligraphy.<br>
+				Here are some of my arts.<br>
+			</p>
+			<div class="toolbar mb2 mt2">
+			  <button class="btn fil-cat" href="" data-rel="all">All</button>
+			  <button class="btn fil-cat" data-rel="poster">Posters</button>
+			  <button class="btn fil-cat" data-rel="flyers">Flyers</button>
+			  <button class="btn fil-cat" data-rel="paintings">Drawings</button>
+			  <button class="btn fil-cat" data-rel="calligraphy">Calligraphy</button>
+			</div> 
+		</article>
+	</div>
 
+<div class="wrapper">
 	<article class="artwork">
-	<div class="toolbar mb2 mt2">
-	  <button class="btn fil-cat" href="" data-rel="all">All</button>
-	  <button class="btn fil-cat" data-rel="poster">Posters</button>
-	  <button class="btn fil-cat" data-rel="flyers">Flyers</button>
-	  <button class="btn fil-cat" data-rel="paintings">Drawings</button>
-	  <button class="btn fil-cat" data-rel="calligraphy">Calligraphy</button>
-	</div> 
 	<div id="portfolio">
 		<div class="tile scale-anm paintings all">
-	    	<img src="art/sunset.jpg" alt=""/>
+	    	<img src="art/sunset.jpg" alt="art-sunset"/>
 		</div>	
 
 		<div class="tile scale-anm calligraphy all">
-			<img src="art/calli-1.png" alt="" />
+			<img src="art/calli-1.png" alt="art-calligraphy-1" />
 		</div>
 		
 		<div class="tile scale-anm flyers all">
-			<img src="art/famifilm.png" alt="" /> 
+			<img src="art/famifilm.png" alt="art-famifilm" /> 
 		</div>
 
 		<div class="tile scale-anm paintings all">
-	    	<img src="art/sunrise.jpg" alt=""/>
+	    	<img src="art/sunrise.jpg" alt="art-sunrise"/>
 		</div>			
 
 		<div class="tile scale-anm poster all">
-			<img src="art/ncpc.jpg" alt="" /> 
+			<img src="art/ncpc.jpg" alt="art-poster-ncpc" /> 
 		</div>
 
 		<div class="tile scale-anm poster all">
-			<img src="art/careercourse.jpg" alt="" /> 
+			<img src="art/careercourse.jpg" alt="art-careercourse" /> 
 		</div>
 		
 		<div class="tile scale-anm calligraphy all">
-			<img src="art/calli-4.png" alt="" />
+			<img src="art/calli-4.png" alt="art-calligraphy-4" />
 		</div>
 		
 		<div class="tile scale-anm poster all">
-			<img src="art/tair.jpg" alt="" /> 
+			<img src="art/tair.jpg" alt="art-poster-tair" /> 
 		</div>
 	
 		<div class="tile scale-anm paintings all">
-	    	<img src="art/sunflower.gif" alt=""/>
+	    	<img src="art/sunflower.gif" alt="art-sunflower"/>
 		</div>	
 
 		<div class="tile scale-anm calligraphy all">
-			<img src="art/calli-3.png" alt="" />
+			<img src="art/calli-3.png" alt="art-calligraphy-3" />
 		</div>		
 
 		<div class="tile scale-anm poster all">
-			<img src="art/library.jpg" alt="" /> 
+			<img src="art/library.png" alt="art-poster-library" /> 
 		</div>	
 		
 		<div class="tile scale-anm calligraphy all">
-			<img src="art/calli-2.png" alt="" />
+			<img src="art/calli-2.png" alt="art-calligraphy-2" />
 		</div>
 		<div class="tile scale-anm paintings all">
-			<img src="art/wlogo.png" alt="" />
+			<img src="art/wlogo.png" alt="art-wlogo" />
 		</div>
 	</div>
 
