--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
 	<script src="scroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-	<title>WEI CHENG | Portfolio</title>
+	<title>PORTFOLIO | WEI CHENG</title>
 </head>
 <body>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">PROJECTS</a></span>
-		<span class="drawer_btn_nav"><a href="artwork.html">ARTWORK</a></span>
+		<span class="drawer_btn_nav"><a href="art.html">ART</a></span>
 		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
 		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
 	</div>
@@ -34,19 +34,19 @@
 		<img class="logo" src="img/logo.png" alt="logo">
 		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
-		<a href="artwork.html" class="a_nav"><span class="btn_nav">ARTWORK</span></a>
-		<a href="index.html" class="a_nav light"><span class="btn_nav">PROJECTS</span></a>
+		<a href="art.html" class="a_nav"><span class="btn_nav">ART</span></a>
+		<a href="index.html" class="a_nav"><span class="btn_nav light">PROJECTS</span></a>
 	</header>
-	<div class="parallax-index-1">
+	<div class="parallax-100 parallax-index-1">
 		<article class="intro">
 			<h1>Hi! I'm Wei Cheng</h1>
 			<p>
-				A graduate student  studying at iSchool<br>at University of Texas at Austin.<br>
+				A graduate student studying at iSchool<br>at University of Texas at Austin.<br>
 				I have 3+ years frontend develop experience,<br>
 				now I'm focusing on<br>
 				<b>User Experience Design</b>.<br>
 			</p><br>
-			see my projects:<br>
+			learn more about Wei:<br>
 			<a href="#wrapper">
 				<i class="fa fa-chevron-down fa-2x" aria-hidden="true"></i>
 			</a>
@@ -55,7 +55,7 @@
 <div class="wrapper" id="wrapper">
 	<!-- projects-small -->
 	<article class="index">
-	<div class="row">
+<!-- 	<div class="row">
 	    <div class="project-small" onclick="openProject('app-trip')">
 	    	<img class="project-size" src="projects/app_trip.png" alt="">
 	    	<h2>TripGIF - iOS Application</h2>
@@ -75,15 +75,69 @@
 	    	<h2>Kaohsiung Rapid Transit Co. - Website</h2>
 	    </div>
 	</div>
-	<div class="row">
-	    <div class="project-small" onclick="openProject('game')">
+	<div class="row"> -->
+<!-- 	    <div class="project-small" onclick="openProject('game')">
 	    	<img class="project-size" src="projects/nsysuhero.png" alt="">
-	    	<h2>NSYSU HERO - Unity Game</h2>
+	    	<h2>NSYSU HERO - Game Design</h2>
+	    </div> -->
+	<article class="wrapper-index">
+<!-- 	<div class="row-index">
+	    <div class="project-small">
+	    	<img class="project-size" src="projects/app_trip.png" alt="">
+	    	<h2>TripGIF - iOS Application</h2>
 	    </div>
+	    <div class="project-small">
+	    	<img class="project-size" src="projects/app_famifilm.png" alt="">
+	    	<h2>FamiFilm - Android Application</h2>
+	    </div>
+	</div> -->
+	<div class="row-index">
+		<h2>PROJECTS</h2>
+	    <a href="projects/game-nsysuhero.html">
+		   	<div class="project-small">
+		    	<img class="project-size" src="projects/game_nsysuhero/nsysuhero.png" alt="">
+		    	<h3>NSYSU HERO</h3>
+		    	<h4>Game Design</h4>
+		    </div>
+	    </a>
+	    <a href="projects/web-krtco.html">
+		    <div class="project-small">
+		    	<img class="project-size" src="projects/web_krtco/krtco.png" alt="">
+		    	<h3>Kaohsiung Rapid Transit Co. Website</h3>
+		    	<h4>Web UI Design & Develop</h4>
+		    </div>
+		</a>
 	</div>
+	<div class="row-index">
+		<h2>ABOUT WEI</h2>
+		<p>I have 3+ years frontend develop experience, I am familiar with app development, web frontend development, database management in SQL, System Analysis and Design Methods. I am now interested in UI/UX design.</p>
+		<div class="traits">
+			<img src="svg/light.svg" class="svg-index"/><br>
+			<h3>Creative</h3>
+			<p>I like to try different design to create products that are interesting but useful. Check out my <a href="art.html">ART</a>!</p>
+		</div>
+		<div class="traits">
+			<img src="svg/love.svg" class="svg-index"/><br>
+			<h3>Empathatic</h3>
+			<p>Being a UX designer, it is important to listen to users and understand their needs. </p>
+		</div>
+		<div class="traits">
+			<img src="svg/gear.svg" class="svg-index"/><br>
+			<h3>Problem Solver</h3>
+			<p>I like to take challenge and solve problems that are related to people's life. Visit my <a href="https://medium.com/design-diary-by-wei-cheng">Design Diary</a> too see more.</p>
+		</div>
+	</div>
+<!-- 	<div class="row-index">
+	    
+	    <a href="projects/web-krtco.html">
+	    <div class="project-small">
+	    	<img class="project-size" src="projects/trip_ks.png" alt="">
+	    	<h2>TripGIF - KS Exhibition Website</h2>
+	    </div> 
+	</div> -->
 	</article>
 	<footer>
-		<span>Contact wei:</span><br>
+		<span>Contact Wei:</span><br>
 		<a target="_blank" href="https://www.facebook.com/WeiChengLily" class="fa foot fa-facebook" style="font-size:25px"></a>
 		<a target="_blank" href="https://github.com/ChengWei1010" class="fa foot fa-github" style="font-size:25px"></a>
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
