--- a/projects/web-krtco.html
+++ b/projects/web-krtco.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="../style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
@@ -23,7 +24,7 @@
 		<span class="drawer_btn_nav"><a href="../index.html" class="light">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="../art.html">ART</a></span>
 		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
-		<span class="drawer_btn_nav"><a href="../WEICHENG.pdf">RESUME</a></span>
+		<span class="drawer_btn_nav"><a href="../weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -31,7 +32,7 @@
 
 	<header>
 		<img class="logo" src="../img/logo.png" alt="logo">
-		<a target="_blank" href="../WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a target="_blank" href="../weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
 		<a href="../index.html" class="a_nav"><span class="btn_nav light">PROJECTS</span></a>
