--- a/art.html
+++ b/art.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
@@ -12,18 +13,18 @@
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
-	<script src="scroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
 	<title>WEI CHENG | Portfolio</title>
 </head>
 <body>
+	<div class="loader"><img class="img-loader" src="img/logo.gif"></div>
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="art.html" class="light">ART</a></span>
 		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
-		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
+		<span class="drawer_btn_nav"><a href="weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -31,7 +32,7 @@
 
 	<header>
 		<img class="logo" src="img/logo.png" alt="logo">
-		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav light">ART</span></a>
 		<a href="index.html" class="a_nav"><span class="btn_nav">PROJECTS</span></a>
@@ -118,6 +119,6 @@
 		<a target="_blank" href="https://www.linkedin.com/in/wei-cheng-280045130/" class="fa foot fa-linkedin" style="font-size:25px"></a><br>
 		<span class="copyright">&copy; WEI CHENG | 2018.</span><br>
 	</footer>
-</id>
+	<script src="scroll.js"></script>
 </body>
 </html>
