--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style-mobile.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- for FF, Chrome, Opera -->
 	<link rel="icon" type="image/png" href="img/logo.png" sizes="16x16">
@@ -12,19 +13,19 @@
 	<link rel="icon" type="image/x-icon" href="img/logo.png" >
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo.png"/>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script></script>
-	<script src="scroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 	<title>PORTFOLIO | WEI CHENG</title>
 </head>
 <body>
+	<div class="loader"><img class="img-loader" src="img/logo.gif"></div>
+
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">PROJECTS</a></span>
 		<span class="drawer_btn_nav"><a href="art.html">ART</a></span>
 		<span class="drawer_btn_nav"><a href="https://medium.com/design-diary-by-wei-cheng">DESIGN DIARY</a></span>
-		<span class="drawer_btn_nav"><a href="WEICHENG.pdf">RESUME</a></span>
+		<span class="drawer_btn_nav"><a href="weicheng_resume.pdf">RESUME</a></span>
 	</div>
 	<div class="nav-icon">
 	  <span></span> <span></span> <span></span> <span></span>
@@ -32,7 +33,7 @@
 
 	<header>
 		<img class="logo" src="img/logo.png" alt="logo">
-		<a target="_blank" href="WEICHENG.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
+		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav">ART</span></a>
 		<a href="index.html" class="a_nav"><span class="btn_nav light">PROJECTS</span></a>
@@ -118,7 +119,7 @@
 		</div>
 		<div class="traits">
 			<img src="svg/love.svg" class="svg-index"/><br>
-			<h3>Empathatic</h3>
+			<h3>Empathetic</h3>
 			<p>Being a UX designer, it is important to listen to users and understand their needs. </p>
 		</div>
 		<div class="traits">
@@ -311,5 +312,6 @@
 	</div>
 	<div id="overlay" onclick="closeProject()"></div>
 </div>
+	<script src="scroll.js"></script>
 </body>
 </html>
