loader bg color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<title>PORTFOLIO | WEI CHENG</title>
 </head>
 <body>
-	<div class="loader"><img class="img-loader" src="img/logo.gif"></div>
+	<div class="loader"><img src="img/logo.gif"></div>
 
 	<div class="drawer">
 		<span class="drawer_btn_nav"><a href="index.html" class="light">PROJECTS</a></span>
