--- a/art.html
+++ b/art.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<header>
-		<img class="logo" src="img/logo.png" alt="logo">
+		<a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
 		<a target="_blank" href="weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="art.html" class="a_nav"><span class="btn_nav light">ART</span></a>
