--- a/projects/game-nsysuhero.html
+++ b/projects/game-nsysuhero.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<header>
-		<img class="logo" src="../img/logo.png" alt="logo">
+		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
 		<a target="_blank" href="../weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
@@ -95,15 +95,14 @@
 		<a href="web-krtco.html">
 			<div class="seemore">
 				<div class="col-three">
-					<h6>SEE NEXT PROJRCT:</h6>
-					<h5>KRTCO website</h5>
+					<h6 class="hcenter">NEXT PROJRCT ></h6>
 				</div>
 				<div class="col-three">
-					
+					<h5 class="hcenter">KRTCO website</h5>
 				</div>
-<!-- 				<div class="col-three">
-					<img src="../projects/game_nsysuhero/nsysuhero_game.png" alt="">
-				</div> -->
+				<div class="col-three">
+					<img class="img-col-one" src="web_krtco/krtco.png" alt="">
+				</div>
 			</div>
 		</a>
 	</div>
