--- a/projects/web-krtco.html
+++ b/projects/web-krtco.html
@@ -31,7 +31,7 @@
 	</div>
 
 	<header>
-		<img class="logo" src="../img/logo.png" alt="logo">
+		<a href="../index.html"><img class="logo" src="../img/logo.png" alt="logo"></a>
 		<a target="_blank" href="../weicheng_resume.pdf" class="a_nav"><span class="btn_nav">RESUME</span></a>
 		<a href="https://medium.com/design-diary-by-wei-cheng" class="a_nav"><span class="btn_nav">DESIGN DIARY</span></a>
 		<a href="../art.html" class="a_nav"><span class="btn_nav">ART</span></a>
@@ -75,18 +75,25 @@
 				<p>6 months</p>
 			</div>
 		</div>
+		<div class="row-project">
+			<div class="col-one">
+				<h5>User Interfaces</h5>
+				<img src="web_krtco/web_krtco1.png" alt="" class="img-col-one">
+				<img src="web_krtco/web_krtco2.png" alt="" class="img-col-one">
+				<img src="web_krtco/web_krtco3.png" alt="" class="img-col-one">
+			</div>
+		</div>
 		<a href="game-nsysuhero.html">
 			<div class="seemore">
 				<div class="col-three">
-					<h6>SEE NEXT PROJRCT:</h6>
-					<h5>NSYSU HERO</h5>
+					<h6 class="hcenter">NEXT PROJRCT ></h6>
 				</div>
 				<div class="col-three">
-					
+					<h5 class="hcenter">NSYSU HERO</h5>
 				</div>
-<!-- 				<div class="col-three">
-					<img src="../projects/game_nsysuhero/nsysuhero_game.png" alt="">
-				</div> -->
+				<div class="col-three">
+					<img class="img-col-one" src="game_nsysuhero/nsysuhero_game.png" alt="">
+				</div>
 			</div>
 		</a>
 	</div>
